[gd_scene load_steps=8 format=3 uid="uid://cuij3ew2lvqew"]

[ext_resource type="Script" path="res://scripts/StartGame.gd" id="1_4tvxy"]
[ext_resource type="Texture2D" uid="uid://cf25kcdk2argr" path="res://assets/graphics/Sky.png" id="1_q13bs"]
[ext_resource type="FontFile" uid="uid://d5telyqdyxm7" path="res://assets/font/Lora-Italic-VariableFont_wght.ttf" id="2_yjk2s"]
[ext_resource type="AudioStream" uid="uid://dgt5wvy187rvw" path="res://assets/Sound/bgmusic.wav" id="4_cx7xc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqlir"]
bg_color = Color(0.717647, 0.494118, 0.835294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqmlg"]
bg_color = Color(0.815686, 0.368627, 0.960784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75813"]
bg_color = Color(0.752941, 0.517647, 0.913725, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4tvxy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(10.0938, 10.0778)
texture = ExtResource("1_q13bs")
centered = false

[node name="HighScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 962.0
offset_top = 394.0
offset_right = 1219.0
offset_bottom = 446.0
theme_override_colors/font_color = Color(0.494118, 0, 0.27451, 1)
theme_override_colors/font_outline_color = Color(0.486275, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_yjk2s")
theme_override_font_sizes/font_size = 51
text = "HIGH SCORE:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 196.0
offset_top = 397.0
offset_right = 523.0
offset_bottom = 463.0
theme_override_colors/font_color = Color(0.494118, 0, 0.27451, 1)
theme_override_colors/font_outline_color = Color(0.486275, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_yjk2s")
theme_override_font_sizes/font_size = 51
text = "SCORE:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 603.0
offset_top = 566.0
offset_right = 951.0
offset_bottom = 626.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_yjk2s")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_wqlir")
theme_override_styles/hover = SubResource("StyleBoxFlat_yqmlg")
text = "PLAY"

[node name="Quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 607.0
offset_top = 653.0
offset_right = 948.0
offset_bottom = 720.0
theme_override_fonts/font = ExtResource("2_yjk2s")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_75813")
text = "QUIT"

[node name="WelcomeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 276.0
offset_top = -2.0
offset_right = 1382.0
offset_bottom = 242.0
theme_override_colors/font_color = Color(0.494118, 0, 0.27451, 1)
theme_override_colors/font_outline_color = Color(0.486275, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_yjk2s")
theme_override_font_sizes/font_size = 77
text = "WELCOME TO JURASSIC RUN
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cx7xc")

[connection signal="pressed" from="Play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Quit_button" to="." method="_on_quit_button_pressed"]
